objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Barclays_SA__Assign_multi_category__c</fullName>
        <formula>HYPERLINK(&quot;/apex/&quot; + IF(ISBLANK($Setup.Barclays_SA__DSA_App_Setting__c.Barclays_SA__Package_Name__c), &quot;&quot;, $Setup.Barclays_SA__DSA_App_Setting__c.Barclays_SA__Package_Name__c + &quot;__&quot;) + &quot;AssignCategories?contentid=&quot;+ Id, &quot;Click Here&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign multi category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Available_Offline__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This content will be available offline.</description>
        <label>Available Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shareable</fullName>
                </value>
                <value>
                    <fullName>Competitive Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barclays_SA__Internal_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to define a document to be Internal only. The document will Only show up in Internal Mode for a Given Configuration.</description>
        <label>Internal Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__IsFeatured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Public_URL__c</fullName>
        <description>Public URL for HTML 5 content. Used to email public content link to customers.</description>
        <inlineHelpText>Publicly available link for HTML 5 content, used in DSA email to customer. Put a public URL in this field for any HTML 5 content that is available publicly on your website.</inlineHelpText>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Matter_Category__c</fullName>
        <label>Matter Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action Lines</fullName>
                </value>
                <value>
                    <fullName>Banking Ombudsman</fullName>
                </value>
                <value>
                    <fullName>CEO’s Office</fullName>
                </value>
                <value>
                    <fullName>Class Action</fullName>
                </value>
                <value>
                    <fullName>Competition / Antitrust</fullName>
                </value>
                <value>
                    <fullName>Compliance with orders made by the Court</fullName>
                </value>
                <value>
                    <fullName>Consumer Statutory Rights</fullName>
                </value>
                <value>
                    <fullName>Contentious IP</fullName>
                </value>
                <value>
                    <fullName>Contract Disputes (other)</fullName>
                </value>
                <value>
                    <fullName>Court Proceedings</fullName>
                </value>
                <value>
                    <fullName>Court Proceedings Filed</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Cybercrime</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Debt Recovery</fullName>
                </value>
                <value>
                    <fullName>Delict</fullName>
                </value>
                <value>
                    <fullName>Employment Related Matters</fullName>
                </value>
                <value>
                    <fullName>Financial Crime</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Incorrect Payments / Transfer of Funds</fullName>
                </value>
                <value>
                    <fullName>Insolvency bankruptcy / Business rescue</fullName>
                </value>
                <value>
                    <fullName>Market Misconduct</fullName>
                </value>
                <value>
                    <fullName>Mortgage Related Activity</fullName>
                </value>
                <value>
                    <fullName>National Credit Regulator/Tribunal</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Not Categorised</fullName>
                </value>
                <value>
                    <fullName>Ombudsman (other)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pension Fund Adjudicators</fullName>
                </value>
                <value>
                    <fullName>Personal Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Type__c</fullName>
        <label>Matter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaints</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__AdvoDoc_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdvoDoc Log</label>
        <referenceTo>advpm__AdvoDoc_Log__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Log_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Time_In_Hours__c</fullName>
        <label>Time (In Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When &quot;Log Time&quot; is checked and &quot;Time (In Hours)&quot; has been provided, a Time Entry for the related Matter is automatically created and linked in this field.</inlineHelpText>
        <label>Time Entry</label>
        <referenceTo>advpm__Time__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PleadingContract</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Motion</fullName>
                </value>
                <value>
                    <fullName>Pleading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>matter_description__c</fullName>
        <label>matter description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>matter_name__c</fullName>
        <label>matter name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>matter_notes__c</fullName>
        <label>matter notes</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>Articles</fullName>
        <active>true</active>
        <label>Articles</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Content</fullName>
        <active>true</active>
        <label>Legal Content</label>
    </recordTypes>
</CustomObject>